refactor: mudancas em aluno para melhorar a performance (ainda possui n+1 ao buscar porcentagem de presenca e ultima avaliacao)